--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Sample index/HTML page -->
+<!-- Sample index/HTML page - version 1 -->
 
 <html>
 <head>
@@ -9,7 +9,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Login Page</title>
 
-    <!-- Bootstrap -->
+    <!-- Bootstrap classes -->
 
     <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
@@ -80,15 +80,6 @@
   							</div>
   						</div>
 
-  						<!-- <div class="form-group">
-  							<label for="confirm" class="cols-sm-2 control-label">Confirm Password</label>
-  							<div class="cols-sm-10">
-  								<div class="input-group">
-  									<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-  									<input type="password" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password"/>
-  								</div>
-  							</div>
-  						</div> -->
 
   						<div class="form-group ">
   							<a href="http://www.google.com" target="_blank" type="button" id="button" class="btn btn-primary btn-lg btn-block login-button">Register</a>
